--- a/index.html
+++ b/index.html
@@ -4,72 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sachin Gupta - Product Manager</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <style>
-      /* Default link color for dark theme */
+      body {
+        font-family: 'Inter', sans-serif;
+      }
+      /* Navigation Styling */
       nav.sticky-nav a {
-        color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+        color: rgba(255, 255, 255, 0.8);
       }
-
-      /* Hover effect to be subtle on dark background */
       nav.sticky-nav a:hover {
-        color: rgba(255, 255, 255, 1); /* Full white on hover */
+        color: rgba(255, 255, 255, 1);
       }
-
-      /* Default link color for mobile menu */
-      #mobile-menu a {
-        color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+      /* Hero section styling */
+      .hero {
+        background: url('background-image.jpg') no-repeat center center fixed;
+        background-size: cover;
+        height: 100vh;
       }
-
-      /* Hover effect for mobile menu */
-      #mobile-menu a:hover {
-        color: rgba(255, 255, 255, 1); /* Full white on hover */
+      /* Sections */
+      #about, #projects, #affiliations {
+        position: relative;
       }
-
-      /* Ensuring Profile Photo remains circular across all screens */
-      .profile-photo {
-        border-radius: 50%;
-        object-fit: cover;
+      /* About, Projects, Affiliations section positioning */
+      .sections-left {
+        position: absolute;
+        left: 20px;
+        top: 30%;
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
       }
-
-      /* Set a fixed size for all images */
-      .project-image,
-      .affiliation-image {
-        width: 150px; /* Fixed width */
-        height: 150px; /* Fixed height */
-        object-fit: cover;
+      .line {
+        width: 5px;
+        height: 100%;
+        background-color: #0077FF;
       }
-
-      /* Adjust image size for mobile screens */
-      @media (max-width: 640px) {
-        .project-image,
-        .affiliation-image {
-          width: 120px; /* Smaller size for mobile */
-          height: 120px; /* Smaller size for mobile */
-        }
+      .affiliations img {
+        width: 150px;
+        height: auto;
+        margin-right: 20px;
+        transition: transform 0.3s ease;
+      }
+      .affiliations img:hover {
+        transform: scale(1.05);
+      }
+      .project-box {
+        background: rgba(255, 255, 255, 0.9);
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+      }
+      .project-box:hover {
+        transform: translateY(-10px);
+      }
+      .footer {
+        background-color: #111;
+        color: white;
+        text-align: center;
+        padding: 20px;
       }
     </style>
   </head>
-  <body class="dark font-sans">
-    <!-- Sticky Header -->
-    <header class="hero py-6 px-8 shadow-md">
-      <div class="max-w-7xl mx-auto flex justify-between items-center">
-        <div>
-          <h1 class="text-4xl font-bold">Sachin Gupta</h1>
-          <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
-        </div>
-        <div>
-          <!-- Profile Photo with circular shape and responsive size -->
-          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 sm:w-20 sm:h-20 md:w-24 md:h-24 profile-photo border-2 border-white shadow-lg object-cover" />
-        </div>
+  <body class="bg-gray-900 text-white">
+    <!-- Hero Section -->
+    <header class="hero py-6 px-8 shadow-md flex justify-between items-center">
+      <div>
+        <h1 class="text-4xl font-bold">Sachin Gupta</h1>
+        <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
+      </div>
+      <div>
+        <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 rounded-full border-2 border-white shadow-lg object-cover" />
       </div>
     </header>
 
     <!-- Sticky Navigation -->
-    <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
-      <div class="max-w-4xl mx-auto flex justify-between items-center relative">
+    <nav class="sticky-nav shadow-md py-3 px-4 text-white">
+      <div class="max-w-7xl mx-auto flex justify-between items-center">
         <div class="lg:hidden">
           <button id="hamburger" class="text-white text-2xl">&#9776;</button>
         </div>
@@ -88,85 +103,51 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
-      <section id="about" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">About</h2>
-        <p>
-          I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
-        </p>
-      </section>
+    <main class="max-w-7xl mx-auto px-6 py-12 space-y-20">
+      <div class="sections-left">
+        <div class="line"></div>
+        <section id="about" data-aos="fade-up">
+          <h2 class="text-3xl font-bold mb-4">About</h2>
+          <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
+        </section>
 
-      <section id="projects" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-8">Projects</h2>
-        <div class="space-y-6">
-          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
-            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
-            <img src="uidai-ekyc.jpg" alt="UIDAI eKYC Integration" class="project-image mt-4">
+        <section id="projects" data-aos="fade-up">
+          <h2 class="text-3xl font-bold mb-8">Projects</h2>
+          <div class="space-y-6">
+            <div class="project-box">
+              <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+              <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+            </div>
+            <div class="project-box">
+              <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+              <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+              <p class="mt-2 font-semibold">Outcome:</p>
+              <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+            </div>
           </div>
-          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
-            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-            <img src="los-system.jpg" alt="Legacy LOS" class="project-image mt-4">
-          </div>
-          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
-            <h3 class="text-xl font-bold">Managing Government Business</h3>
-            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-            <img src="government-business.jpg" alt="Government Business" class="project-image mt-4">
-          </div>
-          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
-            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
-            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
-            <p class="mt-2 font-semibold">Outcome:</p>
-            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
-            <img src="product-strategy.jpg" alt="Product Strategy" class="project-image mt-4">
-          </div>
-        </div>
-      </section>
+        </section>
 
-      <section id="affiliations" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-        <div class="logo-grid mb-10 grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
-          <img src="logo-mother-dairy.webp" alt="Mother Dairy" class="affiliation-image" />
-          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" class="affiliation-image" />
-          <img src="logo-zomato.png" alt="Zomato" class="affiliation-image" />
-          <img src="logo-indicold.png" alt="Indicold" class="affiliation-image" />
-          <img src="logo-unacademy.png" alt="Unacademy" class="affiliation-image" />
-          <img src="logo-tata-trusts.png" alt="Tata Trusts" class="affiliation-image" />
-          <img src="logo-big-league.png" alt="The Big League" class="affiliation-image" />
-        </div>
-        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
-        <div class="logo-grid grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
-          <img src="irma.png" alt="IRMA" class="affiliation-image" />
-          <img src="logo-svpuat.jpeg" alt="SVPUAT" class="affiliation-image" />
-          <img src="logo-university-illinois.png" alt="University of Illinois" class="affiliation-image" />
-        </div>
-      </section>
+        <section id="affiliations" data-aos="fade-up">
+          <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+          <div class="logo-grid mb-10 flex flex-wrap">
+            <img src="logo-mother-dairy.webp" alt="Mother Dairy" class="w-32 h-32 mx-2" />
+            <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" class="w-32 h-32 mx-2" />
+            <img src="logo-zomato.png" alt="Zomato" class="w-32 h-32 mx-2" />
+          </div>
+        </section>
+      </div>
 
-      <section id="contact" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-500 underline">LinkedIn</a>.</p>
-      </section>
-
-      <section id="resume" data-aos="fade-up">
-        <h2 class="text-3xl font-bold mb-4">Resume</h2>
-        <a href="Sachin Gupta_ Product.pdf" download class="text-blue-500 underline">Download Resume</a>
-      </section>
+      <footer class="footer">
+        <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-400 hover:text-blue-500">LinkedIn</a> | 
+        <a href="Sachin Gupta_ Product.pdf" download class="text-white">Click here to download Resume</a>
+      </footer>
     </main>
-
-    <footer class="bg-black text-white py-6 text-center">
-      &copy; 2025 Sachin Gupta. All rights reserved.
-    </footer>
 
     <script>
       AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
-
+      
       const themeToggleButton = document.getElementById("theme-toggle");
       const currentTheme = localStorage.getItem("theme") || "dark";
       document.body.classList.add(currentTheme);
